--- a/time-in/design/app.css
+++ b/time-in/design/app.css
@@ -23,13 +23,17 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
     padding: 20px 40px;
     border-radius: 5px;
-    width: 20%;
+    width: 25%;
     min-width: min-content;
 }
 
 .container h1{
     text-align: center;
     margin-bottom: 30px;
+}
+
+form{
+    margin-bottom: 40px;
 }
 
 .container a{
@@ -52,4 +56,15 @@ body {
 
 #uploadedImage {
     max-width: 300px;
+}
+
+.form-control input{
+    background-color: transparent;
+    border: 0;
+    display: block;
+    width: 100%;
+    border-bottom: 2px #fff solid;
+    padding: 15px 0;
+    font-size: 25px;
+    color: #fff;
 }
