--- a/admin/update-account/design/app.css
+++ b/admin/update-account/design/app.css
@@ -85,6 +85,10 @@ body {
     margin-top: 30px;
 }
 
+div.uid-label{
+    color: lightblue;
+}
+
 .form-control{
     position: relative;
     margin: 20px 0 40px;
